fix dark mode toggle on related products

--- a/client/src/styles/RelatedOutfit.css
+++ b/client/src/styles/RelatedOutfit.css
@@ -375,3 +375,7 @@
   text-align: center;
   justify-content: center;
 }
+
+.none {
+  display: none;
+}
